# relay

./: Makefile
.github/workflows/: ci.yml
devenv/: config.ini  sync.py
py/: CHANGELOG.md
relay/: Cargo.toml
relay-base-schema/src/metrics/: name.rs
relay-cabi/: Cargo.toml
relay-config/src/: config.rs
relay-dynamic-config/src/: defaults.rs  metrics.rs
relay-event-schema/src/protocol/: event.rs  span.rs
relay-metrics/src/: aggregator.rs  lib.rs  partition.rs  view.rs
relay-protocol/src/: annotated.rs  traits.rs
relay-sampling/src/: condition.rs
relay-server/: Cargo.toml
relay-server/src/: alloc.rs  lib.rs
relay-server/src/actors/: envelopes.rs  outcome.rs  outcome_aggregator.rs  processor.rs  project_cache.rs  project_local.rs  relays.rs  store.rs  upstream.rs
relay-server/src/metrics_extraction/: transactions.rs
relay-server/src/metrics_extraction/snapshots/: relay_server__metrics_extraction__event__tests__extract_span_metrics.snap  relay_server__metrics_extraction__event__tests__extract_span_metrics_mobile.snap
relay-server/src/services/: processor.rs  store.rs
relay-server/src/services/processor/span/: processing.rs
relay-server/src/utils/: mod.rs
relay-statsd/: Cargo.toml
relay-statsd/src/: alloc.rs  lib.rs
relay/src/: main.rs
tests/integration/: test_feedback.py
tests/integration/fixtures/: __init__.py
