[package]
name = "relay-statsd"
authors = ["Sentry <oss@sentry.io>"]
description = "High-level StatsD metric client for internal measurements"
homepage = "https://getsentry.github.io/relay/"
repository = "https://github.com/getsentry/relay"
version = "23.5.1"
edition = "2021"
license-file = "../LICENSE"
publish = false

[dependencies]
cadence = "0.29.0"
num_enum = "0.6.1"
parking_lot = "0.12.1"
rand = "0.8.5"
relay-log = { path = "../relay-log" }
memoria = "0.1.0"

[features]
default = []
test = []
